Fixed bug #72505 (readfile() mangles files larger than 2G)